5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1798_2569.log
== TEST (2019-06-10 15:12:07) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0	
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:12:23) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0	
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3)
-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:12:37) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0	
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:14:32) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0	
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
0.927187
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:14:40) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0	
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:14:50) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:14:55) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
0.862875
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:12) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
2.62159
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:14) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
4.34213
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:15) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
7.69389
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:16) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
9.64185
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:17) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
9.65755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:18) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
8.69702
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:32) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.77004
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:33) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.62948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:34) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.48422
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:35) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.00271
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:36) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.13761
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:37) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.04341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:50) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.03761
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:51) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
5.82411
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:52) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.03236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:54) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
5.97542
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:55) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
5.70874
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:15:56) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
5.64839
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:16:10) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.40714
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:16:11) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.48174
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:16:12) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.52357
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:16:13) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.39862
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:16:13) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.07803
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:16:13) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
6.43642
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:16:17) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
2.93682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:16:17) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
1.89579
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1798/2569/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:17:28) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) -1)) *1/2
print(round(d , 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:18:32) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / ((i -1) -1)) *1/2
print(round(d , 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:18:35) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / ((i -1) -1)) *1/2
print(round(d , 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:19:29) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / ((i -1) -1)) *1/2
print(round(d , 3))
-- EXECUTION TIME:
1.03804
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 6, in <module>
    s = (x[i] - m)**2
IndexError: index 250 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:29:59) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / ((i -1) -1)) *1/2
print(round(d , 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:30:25) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / ((i -1) -1)) *1/2
print(round(d , 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:33:13) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) - 1) **1/2
print(round(d , 3))
-- ERROR:
File "XXXX", line 9
    print(round(d , 3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:33:30) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) - 1) **1/2
print(round(d, 3))
-- ERROR:
File "XXXX", line 9
    print(round(d, 3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:33:53) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
acum = 0
for i in x:
	s = (x[i] - m)**2
	acum = acum + s
d = (acum / (size(x) - 1)) **1/2
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:35:51) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
s = 0
for i in x:
	s = s + (x[i] - m)**2
	
d = (s / (size(x) - 1)) **1/2
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:36:33) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
s = 0
for i in range(size(x)):
	s = s + (x[i] - m)**2
	
d = (s / (size(x) - 1)) **1/2
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:37:36) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
s = 0
for i in range(size(x)):
	s = s + (x[i] - m)**2
d = sqrt(s / (size(x) - 1)) 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:51) 
-- CODE:
from numpy import*
x = array(eval(input("vetor de num reais:")))
m = sum(x)/size(x)
s = 0
for i in range(size(x)):
	s = s + (x[i] - m)**2
d = sqrt(s / (size(x) - 1)) 
print(round(d, 3))
-- EXECUTION TIME:
1.06929
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
